--- a/test/index.html
+++ b/test/index.html
@@ -18,13 +18,13 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-MSCV87ELXL"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-206293705-2">
+        </script>
         <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-
-          gtag('config', 'G-MSCV87ELXL');
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-206293705-2');
         </script>
        <style type="text/css">
     * {
