--- a/test/form.html
+++ b/test/form.html
@@ -1,80 +1,81 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-      crossorigin="anonymous"
-    />
-    <style type="text/css">
-    * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"crossorigin="anonymous"
+  />
 
-body {
-  font-family: sans-serif;
-}	
-#form1 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  max-width: 400px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 50px;
-}
+  <style type="text/css">
+    
+    * {margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-form div input {
-  width: 100%;
-  height: 40px;
-  border-radius: 8px;
-  outline: none;
-  border: 4px solid #c4c4c4;
-  padding: 0 30px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-}
+    body {font-family: sans-serif;
+    }	
 
-label {
-  display: block;
-  margin-bottom: 5px;
-}
+    #form1 {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      max-width: 400px;
+      box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+      padding: 50px;
+    }
 
-form div {
-  position: relative;
-  margin-bottom: 15px;
-}
+    form div input {
+      width: 100%;
+      height: 40px;
+      border-radius: 8px;
+      outline: none;
+      border: 4px solid #c4c4c4;
+      padding: 0 30px;
+      box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    }
 
-input:focus {
-  border: 2px solid #f2796e;
-}
+    label {
+      display: block;
+      margin-bottom: 5px;
+    }
 
-form div i {
-  position: absolute;
-  padding: 10px;
-}
+    form div {
+      position: relative;
+      margin-bottom: 15px;
+    }
 
-.failure-icon,
-.error {
-  color: red;
-}
+    input:focus {
+      border: 2px solid #f2796e;
+    }
 
-.success-icon {
-  color: green;
-}
+    form div i {
+      position: absolute;
+      padding: 10px;
+    }
 
-.error {
-  font-size: 14.5px;
-  margin-top: 5px;
-}
-.success-icon,
-.failure-icon {
-  right: 0;
-  opacity: 0;
-}
+    .failure-icon,
+    .error {
+      color: red;
+    }
 
-    </style>
+    .success-icon {
+      color: green;
+    }
+
+    .error {
+      font-size: 14.5px;
+      margin-top: 5px;
+    }
+
+    .success-icon,
+    .failure-icon {
+      right: 0;
+      opacity: 0;
+    }
+  </style>
 </head>
+
 <body>
 	<div class="container">
 
