--- a/tony/faq.html
+++ b/tony/faq.html
@@ -210,8 +210,8 @@
                             <div class="d-flex align-items-center mb-5" style="display:none">
                                 <div class="icon-stack icon-stack-lg bg-primary text-white"><i data-feather="users"></i></div>
                                 <div class="ms-3">
-                                    <h2 class="mb-0">Account</h2>
-                                    <p class="lead mb-0">Let's see if we can help.</p>
+                                    <h2 class="mb-0">Vraag en Antwoord</h2>
+                                    <p class="lead mb-0">Wij kunnen je helpen met je vraag.</p>
                                 </div>
                             </div>
                             <!--einde dont show-->
@@ -231,7 +231,7 @@
                                     <div class="accordion-item">
                                         <h2 class="accordion-header" id="headingOne">
                                             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                Hoe de betaling eruitziet in termen van de details van de transactie
+                                                Hoe de betaling eruitziet in termen van de details van de transactie?
                                             </button>
                                         </h2>
                                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -260,7 +260,7 @@
                                         </h2>
                                         <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
-                                                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                                <strong>Een offerte of afspraak verplicht u tot niets
                                             </div>
                                         </div>
                                     </div>
@@ -272,7 +272,7 @@
                                         </h2>
                                         <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
-                                                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                                <strong>Onze HPL overzettreden bestaan uit een onderlaag die geschikt is voor rechtstreekse verlijming, een high density fibreboard drager met een decoratieve laag en een kunststof toplaag die versterkt is met melamine en aluminiumoxide voor extra antislip. Onze houten overzettreden zijn standaard voorzien van een antislipprofiel voor extra veiligheid, maar kunnen eventueel ook zonder antislip-profiel gemonteerd worden
                                             </div>
                                         </div>
                                     </div>
@@ -284,7 +284,7 @@
                                         </h2>
                                         <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
-                                                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                                <strong>Om de uithardingstijd van de verf te garanderen, raden wij aan om uw trap minimaal een week voor de traprenovatie kaal en schoon te maken en eventueel schilderwerk van de zijkanten uit te voeren.
                                             </div>
                                         </div>
                                     </div>
@@ -296,7 +296,7 @@
                                         </h2>
                                         <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
-                                                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                                <strong>Voor een onderhoudsvrije HPL trap is periodiek reinigen met laminaat-reiniger voldoende. Voor een onderhoudsvrije PVC trap is periodiek reinigen met PVC-reiniger eveneens voldoende. Om uw houten trap in goede staat te houden, raden wij aan om deze een keer of twee per jaar te reinigen en een dun laagje onderhoudsolie aan te brengen.
                                             </div>
                                         </div>
                                     </div>
@@ -308,7 +308,7 @@
                                         </h2>
                                         <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
-                                                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                                <strong>Hoewel de treden van de bestaande trap niet worden vervangen, kunnen ze wellicht worden ingekort om een mooi passend en aansluitend geheel te creëren.
                                             </div>
                                         </div>
                                     </div>
