--- a/tony/faq.html
+++ b/tony/faq.html
@@ -260,7 +260,7 @@
                                         </h2>
                                         <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
-                                                <strong>Een offerte of afspraak verplicht u tot niets
+                                                <strong>Een offerte of afspraak verplicht u tot niets</strong>
                                             </div>
                                         </div>
                                     </div>
@@ -272,7 +272,7 @@
                                         </h2>
                                         <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
-                                                <strong>Onze HPL overzettreden bestaan uit een onderlaag die geschikt is voor rechtstreekse verlijming, een high density fibreboard drager met een decoratieve laag en een kunststof toplaag die versterkt is met melamine en aluminiumoxide voor extra antislip. Onze houten overzettreden zijn standaard voorzien van een antislipprofiel voor extra veiligheid, maar kunnen eventueel ook zonder antislip-profiel gemonteerd worden
+                                                <strong>Onze HPL overzettreden bestaan uit een onderlaag die geschikt is voor rechtstreekse verlijming, een high density fibreboard drager met een decoratieve laag en een kunststof toplaag die versterkt is met melamine en aluminiumoxide voor extra antislip. Onze houten overzettreden zijn standaard voorzien van een antislipprofiel voor extra veiligheid, maar kunnen eventueel ook zonder antislip-profiel gemonteerd worden</strong>
                                             </div>
                                         </div>
                                     </div>
@@ -284,7 +284,7 @@
                                         </h2>
                                         <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
-                                                <strong>Om de uithardingstijd van de verf te garanderen, raden wij aan om uw trap minimaal een week voor de traprenovatie kaal en schoon te maken en eventueel schilderwerk van de zijkanten uit te voeren.
+                                                <strong>Om de uithardingstijd van de verf te garanderen, raden wij aan om uw trap minimaal een week voor de traprenovatie kaal en schoon te maken en eventueel schilderwerk van de zijkanten uit te voeren.</strong>
                                             </div>
                                         </div>
                                     </div>
@@ -296,7 +296,7 @@
                                         </h2>
                                         <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
-                                                <strong>Voor een onderhoudsvrije HPL trap is periodiek reinigen met laminaat-reiniger voldoende. Voor een onderhoudsvrije PVC trap is periodiek reinigen met PVC-reiniger eveneens voldoende. Om uw houten trap in goede staat te houden, raden wij aan om deze een keer of twee per jaar te reinigen en een dun laagje onderhoudsolie aan te brengen.
+                                                <strong>Voor een onderhoudsvrije HPL trap is periodiek reinigen met laminaat-reiniger voldoende. Voor een onderhoudsvrije PVC trap is periodiek reinigen met PVC-reiniger eveneens voldoende. Om uw houten trap in goede staat te houden, raden wij aan om deze een keer of twee per jaar te reinigen en een dun laagje onderhoudsolie aan te brengen.</strong>
                                             </div>
                                         </div>
                                     </div>
@@ -308,7 +308,7 @@
                                         </h2>
                                         <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
-                                                <strong>Hoewel de treden van de bestaande trap niet worden vervangen, kunnen ze wellicht worden ingekort om een mooi passend en aansluitend geheel te creëren.
+                                                <strong>Hoewel de treden van de bestaande trap niet worden vervangen, kunnen ze wellicht worden ingekort om een mooi passend en aansluitend geheel te creëren.</strong>
                                             </div>
                                         </div>
                                     </div>
@@ -351,21 +351,19 @@
             </div>
         </div>
     </div>-->
-                            <div class="svg-border-rounded text-dark">
-                                <!-- Rounded SVG Border-->
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="currentColor"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
-                            </div>
+
 </section>
                 </main>
             </div>
             <div id="layoutDefault_footer">
-                <footer class="footer pt-10 pb-5 mt-auto bg-dark footer-dark">
+                <footer class="footer pt-10 pb-5 mt-auto bg-light footer-light">
                     <div class="container px-5">
+
                         <div class="row gx-5">
                             <div class="col-lg-3">
-                                <div class="footer-brand">SB UI Kit Pro</div>
-                                <div class="mb-3">Design made easy</div>
-                                <div class="icon-list-social mb-5">
+                                <div class="footer-brand">TOON parket en trappen renovatie.</div>
+                                <div class="mb-3">bel ons op +31642004357 </div>
+                                <div class="icon-list-social mb-5" style="display:none">
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-instagram"></i></a>
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-facebook"></i></a>
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-github"></i></a>
@@ -375,42 +373,22 @@
                             <div class="col-lg-9">
                                 <div class="row gx-5">
                                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Product</div>
+                                        <div class="text-uppercase-expanded text-xs mb-4">Pagina's</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Landing</a></li>
-                                            <li class="mb-2"><a href="#!">Pages</a></li>
-                                            <li class="mb-2"><a href="#!">Sections</a></li>
-                                            <li class="mb-2"><a href="#!">Documentation</a></li>
-                                            <li><a href="#!">Changelog</a></li>
+                                            <li class="mb-2"><a href="index.html">Home</a></li>
+                                            <li class="mb-2"><a href="overons.html">Onze werkwijze</a></li>
+                                            <li class="mb-2"><a href="foto.html">Gerealiseerd</a></li>
+                                            <li class="mb-2"><a href="faq.html">FAQ</a></li>
+                                            <li class="mb-2"><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </div>
-                                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Technical</div>
-                                        <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Documentation</a></li>
-                                            <li class="mb-2"><a href="#!">Changelog</a></li>
-                                            <li class="mb-2"><a href="#!">Theme Customizer</a></li>
-                                            <li><a href="#!">UI Kit</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Includes</div>
-                                        <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Utilities</a></li>
-                                            <li class="mb-2"><a href="#!">Components</a></li>
-                                            <li class="mb-2"><a href="#!">Layouts</a></li>
-                                            <li class="mb-2"><a href="#!">Code Samples</a></li>
-                                            <li class="mb-2"><a href="#!">Products</a></li>
-                                            <li class="mb-2"><a href="#!">Affiliates</a></li>
-                                            <li><a href="#!">Updates</a></li>
-                                        </ul>
-                                    </div>
+
+
                                     <div class="col-lg-3 col-md-6">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Legal</div>
+                                        <div class="text-uppercase-expanded text-xs mb-4">Links</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Privacy Policy</a></li>
-                                            <li class="mb-2"><a href="#!">Terms and Conditions</a></li>
-                                            <li><a href="#!">License</a></li>
+                                            <li class="mb-2"><a href="https://fedi-traprenovatie.nl/konfigurator/treppe/index-integrated.php?brand=5726e2ffe8c28&lang=nl_NL!">FEDI configurator</a></li>
+
                                         </ul>
                                     </div>
                                 </div>
@@ -418,7 +396,7 @@
                         </div>
                         <hr class="my-5" />
                         <div class="row gx-5 align-items-center">
-                            <div class="col-md-6 small">Copyright &copy; Your Website 2021</div>
+                            <div class="col-md-6 small">Copyright &copy; Tony trappenrenovatie 2023</div>
                             <div class="col-md-6 text-md-end small">
                                 <a href="#!">Privacy Policy</a>
                                 &middot;
