--- a/tony/contact.html
+++ b/tony/contact.html
@@ -235,15 +235,15 @@
                             </div>
                         </div>
                         <!-- Angled SVG Border
-                        <div class="svg-border-angled text-white">
-                            <!-- Angled SVG Border
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" fill="currentColor"><polygon points="0,100 100,0 100,100"></polygon></svg>
-                        </div>
-                        -->
+                <div class="svg-border-angled text-white">
+                    <!-- Angled SVG Border
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" fill="currentColor"><polygon points="0,100 100,0 100,100"></polygon></svg>
+                </div>
+                -->
                     </header>
-              
-                   
-   
+
+
+
                     <section class="bg-white border-bottom py-10">
                         <div class="container px-5">
                             <div class="row gx-5 align-items-center">
@@ -252,23 +252,24 @@
                                     <p class="lead mb-0">Neem contact met ons op 06 123456789</p>
                                 </div>
                                 <!--
-                                <div class="col-lg-6 text-lg-end">
-                                    <a class="btn btn-primary fw-500 me-2" href="#!">Start Now</a>
-                                    <a class="btn btn-transparent-dark fw-500" href="#!">Contact Us</a>
-                                </div>-->
+                        <div class="col-lg-6 text-lg-end">
+                            <a class="btn btn-primary fw-500 me-2" href="#!">Start Now</a>
+                            <a class="btn btn-transparent-dark fw-500" href="#!">Contact Us</a>
+                        </div>-->
                             </div>
                         </div>
                     </section>
                 </main>
             </div>
             <div id="layoutDefault_footer">
-                <footer class="footer pt-10 pb-5 mt-auto bg-white footer-light">
+                <footer class="footer pt-10 pb-5 mt-auto bg-light footer-light">
                     <div class="container px-5">
+
                         <div class="row gx-5">
                             <div class="col-lg-3">
-                                <div class="footer-brand">SB UI Kit Pro</div>
-                                <div class="mb-3">Design made easy</div>
-                                <div class="icon-list-social mb-5">
+                                <div class="footer-brand">TOON parket en trappen renovatie.</div>
+                                <div class="mb-3">bel ons op +31642004357 </div>
+                                <div class="icon-list-social mb-5" style="display:none">
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-instagram"></i></a>
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-facebook"></i></a>
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-github"></i></a>
@@ -278,42 +279,22 @@
                             <div class="col-lg-9">
                                 <div class="row gx-5">
                                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Product</div>
+                                        <div class="text-uppercase-expanded text-xs mb-4">Pagina's</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Landing</a></li>
-                                            <li class="mb-2"><a href="#!">Pages</a></li>
-                                            <li class="mb-2"><a href="#!">Sections</a></li>
-                                            <li class="mb-2"><a href="#!">Documentation</a></li>
-                                            <li><a href="#!">Changelog</a></li>
+                                            <li class="mb-2"><a href="index.html">Home</a></li>
+                                            <li class="mb-2"><a href="overons.html">Onze werkwijze</a></li>
+                                            <li class="mb-2"><a href="foto.html">Gerealiseerd</a></li>
+                                            <li class="mb-2"><a href="faq.html">FAQ</a></li>
+                                            <li class="mb-2"><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </div>
-                                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Technical</div>
-                                        <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Documentation</a></li>
-                                            <li class="mb-2"><a href="#!">Changelog</a></li>
-                                            <li class="mb-2"><a href="#!">Theme Customizer</a></li>
-                                            <li><a href="#!">UI Kit</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Includes</div>
-                                        <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Utilities</a></li>
-                                            <li class="mb-2"><a href="#!">Components</a></li>
-                                            <li class="mb-2"><a href="#!">Layouts</a></li>
-                                            <li class="mb-2"><a href="#!">Code Samples</a></li>
-                                            <li class="mb-2"><a href="#!">Products</a></li>
-                                            <li class="mb-2"><a href="#!">Affiliates</a></li>
-                                            <li><a href="#!">Updates</a></li>
-                                        </ul>
-                                    </div>
+
+
                                     <div class="col-lg-3 col-md-6">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Legal</div>
+                                        <div class="text-uppercase-expanded text-xs mb-4">Links</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Privacy Policy</a></li>
-                                            <li class="mb-2"><a href="#!">Terms and Conditions</a></li>
-                                            <li><a href="#!">License</a></li>
+                                            <li class="mb-2"><a href="https://fedi-traprenovatie.nl/konfigurator/treppe/index-integrated.php?brand=5726e2ffe8c28&lang=nl_NL!">FEDI configurator</a></li>
+
                                         </ul>
                                     </div>
                                 </div>
@@ -321,7 +302,7 @@
                         </div>
                         <hr class="my-5" />
                         <div class="row gx-5 align-items-center">
-                            <div class="col-md-6 small">Copyright &copy; Your Website 2021</div>
+                            <div class="col-md-6 small">Copyright &copy; Tony trappenrenovatie 2023</div>
                             <div class="col-md-6 text-md-end small">
                                 <a href="#!">Privacy Policy</a>
                                 &middot;
