--- a/tony/foto.html
+++ b/tony/foto.html
@@ -194,8 +194,11 @@
                             <div class="container px-5 text-center">
                                 <div class="row gx-5 justify-content-center">
                                     <div class="col-lg-8">
-                                        <h1 class="page-header-ui-title mb-3">Our work</h1>
-                                        <p class="page-header-ui-text mb-0">A showcase of project's we've worked on in the past year</p>
+                                        <h1 class="page-header-ui-title mb-3">Ons werk</h1>
+                                        <p class="page-header-ui-text mb-0">
+                                            Wij hebben meer dan 1.000 trappen bekleed met massief eiken en laminaat van de beste kwaliteit! U kunt ons werk bekijken op onze deze pagina.
+                                        <p>Als u ook zo’n mooie trap wilt, kunt u nu een gratis offerte aanvragen.</p>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -211,43 +214,144 @@
 
                                 <!--lightbox voor bootstrap-->
                                 <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
-                                    <a href="assets/img/p/1voor.jpg" data-lightbox="roadtrip">
-                                        <img width="300" height="634" src="assets/img/p/1voor.jpg" data-lightbox="roadtrip">
+                                    <a href="assets/img/p/gallery/1voor.jpg" data-lightbox="roadtrip">
+                                        <img width="300" height="634" src="assets/img/p/gallery/1voor.jpg" data-lightbox="roadtrip">
                                     </a>
                                 </div>
 
                                 <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
-                                    <a href="assets/img/p/1na.jpg" data-lightbox="roadtrip">
-                                        <img width="300" height="634" src="assets/img/p/1na.jpg" data-lightbox="roadtrip">
+                                    <a href="assets/img/p/gallery/1na.jpg" data-lightbox="roadtrip">
+                                        <img width="300" height="634" src="assets/img/p/gallery/1na.jpg" data-lightbox="roadtrip">
                                     </a>
                                 </div>
                                 <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
-                                    <a href="assets/img/p/2.jpg" data-lightbox="roadtrip">
-                                        <img width="200" height="200" src="assets/img/p/2.jpg" data-lightbox="roadtrip">
+                                    <a href="assets/img/p/gallery/2.jpg" data-lightbox="roadtrip">
+                                        <img width="300" height="634" src="assets/img/p/gallery/2.jpg" data-lightbox="roadtrip">
                                     </a>
                                 </div>
                                 <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
-                                    <a href="assets/img/p/2.jpg" data-lightbox="roadtrip">
-                                        <img width="200" height="200" src="assets/img/p/2.jpg" data-lightbox="roadtrip">
+                                    <a href="assets/img/p/gallery/3.jpg" data-lightbox="roadtrip">
+                                        <img width="300" height="634" src="assets/img/p/gallery/3.jpg" data-lightbox="roadtrip">
                                     </a>
                                 </div>
 
+                                <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                    <a href="assets/img/p/gallery/4voor.jpg" data-lightbox="roadtrip">
+                                        <img width="300" height="634" src="assets/img/p/gallery/4voor.jpg" data-lightbox="roadtrip">
+                                    </a>
+                                </div>
+                                <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                    <a href="assets/img/p/gallery/4na.jpg" data-lightbox="roadtrip">
+                                        <img width="300" height="634" src="assets/img/p/gallery/4na.jpg" data-lightbox="roadtrip">
+                                    </a>
+                                </div>
+                                <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                    <a href="assets/img/p/gallery/5voor.jpg" data-lightbox="roadtrip">
+                                        <img width="300" height="634" src="assets/img/p/gallery/5voor.jpg" data-lightbox="roadtrip">
+                                    </a>
+                                </div>
+
+                                <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                    <a href="assets/img/p/gallery/5na.jpg" data-lightbox="roadtrip">
+                                        <img width="300" height="634" src="assets/img/p/gallery/5na.jpg" data-lightbox="roadtrip">
+                                    </a>
+                                </div>
+                                <!--begin van de vloeren -->
+                                <div class="row gx-5">
+                                    <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                        <a href="assets/img/p/gallery/6voor_vloer.jpg" data-lightbox="roadtrip">
+                                            <img width="311" height="415" src="assets/img/p/gallery/6voor_vloer.jpg" data-lightbox="roadtrip">
+                                        </a>
+                                    </div>
+                                    <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                        <a href="assets/img/p/gallery/6na_vloer.jpg" data-lightbox="roadtrip">
+                                            <img width="311" height="415" src="assets/img/p/gallery/6na_vloer.jpg" data-lightbox="roadtrip">
+                                        </a>
+                                    </div>
+
+                                    <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                        <a href="assets/img/p/gallery/8.jpg" data-lightbox="roadtrip">
+                                            <img width="311" height="415" src="assets/img/p/gallery/8.jpg" data-lightbox="roadtrip">
+                                        </a>
+                                    </div>
+                                    <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                        <a href="assets/img/p/gallery/9.jpg" data-lightbox="roadtrip">
+                                            <img width="311" height="415" src="assets/img/p/gallery/9.jpg" data-lightbox="roadtrip">
+                                        </a>
+                                    </div>
+                                    <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                        <a href="assets/img/p/gallery/10.jpg" data-lightbox="roadtrip">
+                                            <img width="311" height="415" src="assets/img/p/gallery/10.jpg" data-lightbox="roadtrip">
+                                        </a>
+                                    </div>
+                                    <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                        <a href="assets/img/p/gallery/11.jpg" data-lightbox="roadtrip">
+                                            <img width="311" height="415" src="assets/img/p/gallery/11.jpg" data-lightbox="roadtrip">
+                                        </a>
+                                    </div>
+
+                                    <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                        <a href="assets/img/p/gallery/12.jpg" data-lightbox="roadtrip">
+                                            <img width="311" height="415" src="assets/img/p/gallery/12.jpg" data-lightbox="roadtrip">
+                                        </a>
+                                    </div>
+                                    <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                        <a href="assets/img/p/gallery/13.jpg" data-lightbox="roadtrip">
+                                            <img width="311" height="415" src="assets/img/p/gallery/13.jpg" data-lightbox="roadtrip">
+                                        </a>
+                                    </div>
+                                    <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                        <a href="assets/img/p/gallery/14.jpg" data-lightbox="roadtrip">
+                                            <img width="311" height="415" src="assets/img/p/gallery/14.jpg" data-lightbox="roadtrip">
+                                        </a>
+                                    </div>
+                                    <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                        <a href="assets/img/p/gallery/15.jpg" data-lightbox="roadtrip">
+                                            <img width="311" height="415" src="assets/img/p/gallery/15.jpg" data-lightbox="roadtrip">
+                                        </a>
+                                    </div>
+
+                                    <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+                                        <a href="assets/img/p/gallery/16.jpg" data-lightbox="roadtrip">
+                                            <img width="311" height="415" src="assets/img/p/gallery/16.jpg" data-lightbox="roadtrip">
+                                        </a>
+                                    </div>
 
 
-                                <!- einde van de modal box.-->
+
+
+                                </div>
+                                <div class="row gx-5">
+
+                                </div>
+
+
+                                <!- einde van de Plaatjes.-->
+
+
+                                <script>
+                                    lightbox.option({
+                                        'resizeDuration': 1,
+                                        'wrapAround': true,
+                                        'alwaysShowNavOnTouchDevices': true,
+                                        'albumLabel': "Projecten %1 of %2"
+                                                                                                                                            'fadeDuration': 300,
+                                    })
+                                </script>
+
 
 
                             </div>
-                            
+
                         </div>
                     </section>
                     <section class="bg-white py-10">
                         <div class="container px-5">
                             <div class="row gx-5 justify-content-center">
                                 <div class="col-xl-6 col-lg-8 col-md-10 text-center py-5">
-                                    <h2>Ready to get Started?</h2>
-                                    <p class="lead text-gray-500 mb-5">We'd love to hear from you about your branding and digital needs. We are currently accepting new clients.</p>
-                                    <a class="btn btn-primary fw-500" href="#!">Contact us</a>
+                                    <h2>Genoeg gezien en wilt u meer informatie?</h2>
+                                    <p class="lead text-gray-500 mb-5">We horen graag van u. Maak gebruik van de contact pagina op deze website om met ons in contact te komen of klik de knop hieronder. </p>
+                                    <a class="btn btn-primary fw-500" href="contact.html">Contacteer ons</a>
                                 </div>
                             </div>
                         </div>
@@ -259,13 +363,14 @@
                 </main>
             </div>
             <div id="layoutDefault_footer">
-                <footer class="footer pt-10 pb-5 mt-auto bg-dark footer-dark">
+                <footer class="footer pt-10 pb-5 mt-auto bg-light footer-light">
                     <div class="container px-5">
+
                         <div class="row gx-5">
                             <div class="col-lg-3">
-                                <div class="footer-brand">SB UI Kit Pro</div>
-                                <div class="mb-3">Design made easy</div>
-                                <div class="icon-list-social mb-5">
+                                <div class="footer-brand">TOON parket en trappen renovatie.</div>
+                                <div class="mb-3">bel ons op +31642004357 </div>
+                                <div class="icon-list-social mb-5" style="display:none">
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-instagram"></i></a>
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-facebook"></i></a>
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-github"></i></a>
@@ -275,42 +380,22 @@
                             <div class="col-lg-9">
                                 <div class="row gx-5">
                                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Product</div>
+                                        <div class="text-uppercase-expanded text-xs mb-4">Pagina's</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Landing</a></li>
-                                            <li class="mb-2"><a href="#!">Pages</a></li>
-                                            <li class="mb-2"><a href="#!">Sections</a></li>
-                                            <li class="mb-2"><a href="#!">Documentation</a></li>
-                                            <li><a href="#!">Changelog</a></li>
+                                            <li class="mb-2"><a href="index.html">Home</a></li>
+                                            <li class="mb-2"><a href="overons.html">Onze werkwijze</a></li>
+                                            <li class="mb-2"><a href="foto.html">Gerealiseerd</a></li>
+                                            <li class="mb-2"><a href="faq.html">FAQ</a></li>
+                                            <li class="mb-2"><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </div>
-                                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Technical</div>
-                                        <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Documentation</a></li>
-                                            <li class="mb-2"><a href="#!">Changelog</a></li>
-                                            <li class="mb-2"><a href="#!">Theme Customizer</a></li>
-                                            <li><a href="#!">UI Kit</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Includes</div>
-                                        <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Utilities</a></li>
-                                            <li class="mb-2"><a href="#!">Components</a></li>
-                                            <li class="mb-2"><a href="#!">Layouts</a></li>
-                                            <li class="mb-2"><a href="#!">Code Samples</a></li>
-                                            <li class="mb-2"><a href="#!">Products</a></li>
-                                            <li class="mb-2"><a href="#!">Affiliates</a></li>
-                                            <li><a href="#!">Updates</a></li>
-                                        </ul>
-                                    </div>
+
+
                                     <div class="col-lg-3 col-md-6">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Legal</div>
+                                        <div class="text-uppercase-expanded text-xs mb-4">Links</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Privacy Policy</a></li>
-                                            <li class="mb-2"><a href="#!">Terms and Conditions</a></li>
-                                            <li><a href="#!">License</a></li>
+                                            <li class="mb-2"><a href="https://fedi-traprenovatie.nl/konfigurator/treppe/index-integrated.php?brand=5726e2ffe8c28&lang=nl_NL!">FEDI configurator</a></li>
+
                                         </ul>
                                     </div>
                                 </div>
@@ -318,7 +403,7 @@
                         </div>
                         <hr class="my-5" />
                         <div class="row gx-5 align-items-center">
-                            <div class="col-md-6 small">Copyright &copy; Your Website 2021</div>
+                            <div class="col-md-6 small">Copyright &copy; Tony trappenrenovatie 2023</div>
                             <div class="col-md-6 text-md-end small">
                                 <a href="#!">Privacy Policy</a>
                                 &middot;
