--- a/tony/index.html
+++ b/tony/index.html
@@ -540,7 +540,7 @@
 
                     <div class="row gx-5">
                         <div class="col-lg-3">
-                            <div class="footer-brand">Tony trappenrenovatie op maat</div>
+                            <div class="footer-brand">TOON parket en trappen renovatie.</div>
                             <div class="mb-3">bel ons op +31642004357 </div>
                             <div class="icon-list-social mb-5" style="display:none">
                                 <a class="icon-list-social-link" href="#!"><i class="fab fa-instagram"></i></a>
@@ -554,30 +554,20 @@
                                 <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                                     <div class="text-uppercase-expanded text-xs mb-4">Pagina's</div>
                                     <ul class="list-unstyled mb-0">
-                                        <li class="mb-2"><a href="#!">Home</a></li>
-                                        <li class="mb-2"><a href="#!">Onze werkwijze</a></li>
-                                        <li class="mb-2"><a href="#!">Gerealiseerd</a></li>
-                                        <li class="mb-2"><a href="#!">FAQ</a></li>
-                                        <li class="mb-2"><a href="#!">Nieuws</a></li>
-                                        <li class="mb-2"><a href="#!">Contact</a></li>
+                                        <li class="mb-2"><a href="index.html">Home</a></li>
+                                        <li class="mb-2"><a href="overons.html">Onze werkwijze</a></li>
+                                        <li class="mb-2"><a href="foto.html">Gerealiseerd</a></li>
+                                        <li class="mb-2"><a href="faq.html">FAQ</a></li>
+                                        <li class="mb-2"><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </div>
-                                <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                                    <div class="text-uppercase-expanded text-xs mb-4">Technical</div>
-                                    <ul class="list-unstyled mb-0">
-                                        <li class="mb-2"><a href="#!">Documentation</a></li>
-                                        <li class="mb-2"><a href="#!">Changelog</a></li>
-                                        <li class="mb-2"><a href="#!">Theme Customizer</a></li>
-                                        <li><a href="#!">UI Kit</a></li>
-                                    </ul>
-                                </div>
+
 
                                 <div class="col-lg-3 col-md-6">
                                     <div class="text-uppercase-expanded text-xs mb-4">Links</div>
                                     <ul class="list-unstyled mb-0">
-                                        <li class="mb-2"><a href="https://fedi-traprenovatie.nl/konfigurator/treppe/index-integrated.php?brand=5726e2ffe8c28&lang=nl_NL!">configurator</a></li>
-                                        <li class="mb-2"><a href="#!">Terms and Conditions</a></li>
-                                        <li><a href="#!">License</a></li>
+                                        <li class="mb-2"><a href="https://fedi-traprenovatie.nl/konfigurator/treppe/index-integrated.php?brand=5726e2ffe8c28&lang=nl_NL!">FEDI configurator</a></li>
+
                                     </ul>
                                 </div>
                             </div>
